Finalise report and email

--- a/project/public/css/app-custom.css
+++ b/project/public/css/app-custom.css
@@ -11,3 +11,10 @@
 {
     padding:8px 10px;
 }
+.hideButton
+{
+    display: none;
+}
+.dt-table>tbody>tr>td:first-child {
+    text-align: left !important;
+}
